# wadah-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yml
config/: base.yaml  production.yaml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/middleware/: cors.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: user.rs
crates/domain/src/repositories/: user_repository.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20250426000001_create_users.sql
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/config/: mod.rs
crates/infrastructure/src/persistence/postgres/: mod.rs  user_repository.rs
migrations/: init.sql
services/core-platform/: Cargo.toml
services/core-platform/src/: config.rs  main.rs  server.rs
services/core-platform/src/api/: auth.rs  mod.rs  subscription.rs  tenant.rs  user.rs
services/core-platform/src/api/nocode/: mod.rs  schema.rs  ui.rs  workflow.rs
services/core-platform/src/domain/: auth.rs  mod.rs  subscription.rs  tenant.rs  user.rs
services/core-platform/src/domain/nocode/: mod.rs  schema.rs  ui.rs  workflow.rs
services/core-platform/src/middleware/: auth.rs  mod.rs  subscription.rs  tenant.rs
services/notification/src/: config.rs  main.rs  server.rs
services/notification/src/api/: mod.rs  notification.rs
services/notification/src/channels/: email.rs  mod.rs  sms.rs
services/notification/src/domain/: mod.rs  notification.rs
services/unified-product/src/: config.rs  main.rs  server.rs
services/unified-product/src/api/: mod.rs
services/unified-product/src/api/klolaform/: form.rs  mod.rs
services/unified-product/src/api/klolakos/: mod.rs  property.rs
services/unified-product/src/api/klolarental/: booking.rs  mod.rs  vehicle.rs
services/unified-product/src/api/klolatoko/: mod.rs  product.rs
services/unified-product/src/domain/: mod.rs
services/unified-product/src/domain/klolaform/: form.rs  mod.rs
services/unified-product/src/domain/klolakos/: mod.rs  property.rs
services/unified-product/src/domain/klolarental/: mod.rs  vehicle.rs
services/unified-product/src/domain/klolatoko/: mod.rs  product.rs
services/unified-product/src/middleware/: auth.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/db/: connection.rs  migration.rs  mod.rs  query.rs
shared/src/models/: entity.rs  error.rs  mod.rs  product.rs  subscription.rs  tenant.rs  user.rs
shared/src/utils/: crypto.rs  datetime.rs  error.rs  mod.rs  validation.rs
