[workspace]
members = [
    "services/core-platform",
    "services/unified-product",
    "services/file-storage",
    "services/notification",
    "services/infrastructure",
    "shared"
]

[workspace.dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
r2d2 = "0.8.10"
redis = { version = "0.23.0", features = ["tokio-comp"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
requests = "0.0.30"
s3 = "0.32.3"
aws-sdk-s3 = "0.28.0"
image = "0.24.6"
lettria = "0.5.0"
amqp = "0.1.6"
elasticsearch = "8.5.0"
mail-send = "0.4.0"
sms-send = "0.1.0"
