[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
axum = { version = "0.7", features = ["headers", "macros", "multipart"] }
tower = { version = "0.4", features = ["limit", "buffer", "filter"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "request-id", "metrics", "timeout", "limit"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Middleware & Security
tower-cookies = "0.10"
tower-sessions = "0.8"
tower-governor = "0.1"
axum-extra = { version = "0.9", features = ["cookie"] }
http-body = "1.0"
headers = "0.4"
time = "0.3"

# Metrics & Monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"
